--- a/jspsych/examples/webgazer.html
+++ b/jspsych/examples/webgazer.html
@@ -64,7 +64,7 @@
       //   [60,10],[60,30],[60,40],[60,45],[60,50],[60,55],[60,60],[60,70],[60,90],
       //   [70,10],[70,50],[70,90],
       //   [90,10],[90,50],[90,90]],
-      repetitions_per_point: 2,
+      repetitions_per_point: 1,
       randomize_calibration_order: true,
     };
 
@@ -81,8 +81,11 @@
 
     var validation = {
       type: jsPsychWebgazerValidate,
-      validation_points: [[25,25], [25,75], [75,25], [75,75]],
-      show_validation_data: true
+      validation_points: [[25,25], [25,75], [75,25], [75,75], [50,25],[50,75]],
+      show_validation_data: true,
+      on_finish: function() {
+        console.log(jsPsych.data)
+      }
     };
 
     var task_instructions = {
@@ -164,8 +167,10 @@
     timeline.push(calibration);
     timeline.push(validation_instructions);
     timeline.push(validation);
-    timeline.push(task_instructions);
-    timeline.push(trial_proc);
+    timeline.push(validation);
+    timeline.push(validation);
+    //timeline.push(task_instructions);
+    //timeline.push(trial_proc);
     timeline.push(done);
 
     jsPsych.run(timeline);
